UI 레이아웃 개선: 문서 관리 탭 2열 그리드 레이아웃, 질문/답변 박스 크기 조정, 사용자 친화적 레이아웃 최적화

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,10 @@
         <!-- 시스템 정보 (MODEL_INFO 활용) -->
         <div class="system-info" id="system-info" style="display: none;">
           <div class="info-item">
+            <span class="info-label">API 주소:</span>
+            <span class="info-value" id="info-api-url" style="cursor: pointer; text-decoration: underline;" title="클릭하여 변경">-</span>
+          </div>
+          <div class="info-item">
             <span class="info-label">Device:</span>
             <span class="info-value" id="info-device">-</span>
           </div>
@@ -40,146 +44,249 @@
         </div>
       </header>
 
+      <!-- 탭 네비게이션 -->
+      <nav class="tab-nav">
+        <button class="tab-btn active" data-tab="chat">💬 채팅</button>
+        <button class="tab-btn" data-tab="docs">📚 문서 관리</button>
+      </nav>
+
       <!-- 메인 컨텐츠 -->
       <div class="main-content">
-        <!-- 왼쪽: 옵션 -->
-        <aside class="sidebar">
-          <section class="panel panel-options">
-            <h2>⚙️ 질의 옵션</h2>
-            
-            <div class="options-grid">
-              <!-- 키워드 필터 -->
-              <div class="option-group">
-                <label for="keyword-select" class="option-label">
-                  <span>🔍 키워드 필터</span>
-                  <span class="tooltip-icon" title="특정 키워드의 문서만 검색합니다">ℹ️</span>
-                </label>
-                <select id="keyword-select" class="select-input">
-                  <option value="">(전체 키워드)</option>
-                </select>
-                <p class="option-hint">특정 키워드만 검색하려면 선택하세요</p>
+        <!-- 채팅 탭 -->
+        <div class="tab-content active" id="tab-chat" style="display: grid !important; grid-template-columns: 220px 1fr !important; gap: 16px; width: 100%;">
+          <!-- 왼쪽: 옵션 -->
+          <aside class="sidebar" style="width: 220px !important; min-width: 220px !important; max-width: 220px !important;">
+            <section class="panel panel-options">
+              <div class="panel-header-collapsible">
+                <h2>⚙️ 질의 옵션</h2>
+                <button class="collapse-btn" id="options-collapse-btn" title="옵션 접기/펼치기">▼</button>
               </div>
-
-              <!-- Top-k -->
-              <div class="option-group">
-                <label for="topk-input" class="option-label">
-                  <span>📊 Top-k 문장 수</span>
-                  <span class="badge badge-primary" id="topk-label">3</span>
-                </label>
-                <input
-                  type="range"
-                  id="topk-input"
-                  class="range-input"
-                  min="1"
-                  max="10"
-                  value="3"
-                />
-                <div class="range-labels">
-                  <span>1</span>
-                  <span>10</span>
-                </div>
-                <p class="option-hint">검색해서 LLM에 전달할 문장 개수</p>
-              </div>
-
-              <!-- Max Tokens -->
-              <div class="option-group">
-                <label for="max-tokens-input" class="option-label">
-                  <span>📝 최대 생성 토큰</span>
-                  <span class="badge badge-primary" id="max-tokens-label">256</span>
-                </label>
-                <input
-                  type="range"
-                  id="max-tokens-input"
-                  class="range-input"
-                  min="64"
-                  max="512"
-                  step="32"
-                  value="256"
-                />
-                <div class="range-labels">
-                  <span>64</span>
-                  <span>512</span>
-                </div>
-                <p class="option-hint">답변 길이 조절 (길수록 느림)</p>
-              </div>
-
-              <!-- 옵션 플래그 -->
-              <div class="option-group option-flags">
-                <label class="option-label">🎛️ 고급 옵션</label>
-                <div class="checkbox-group">
-                  <label class="checkbox-label">
-                    <input type="checkbox" id="context-only" />
-                    <span>컨텍스트만 보기</span>
-                    <span class="checkbox-hint">답변 생성 없이 검색 결과만</span>
+              
+              <div class="options-grid" id="options-content">
+                <!-- 키워드 필터 -->
+                <div class="option-group">
+                  <label for="keyword-select" class="option-label">
+                    <span>🔍 키워드 필터</span>
+                    <span class="tooltip-icon" title="특정 키워드의 문서만 검색합니다">ℹ️</span>
                   </label>
-                  <label class="checkbox-label">
-                    <input type="checkbox" id="debug-flag" />
-                    <span>디버그 모드</span>
-                    <span class="checkbox-hint">백엔드 콘솔에 상세 로그 출력</span>
-                  </label>
+                  <select id="keyword-select" class="select-input">
+                    <option value="">(전체 키워드)</option>
+                  </select>
+                  <p class="option-hint">특정 키워드만 검색하려면 선택하세요</p>
                 </div>
-              </div>
-            </div>
-          </section>
-        </aside>
 
-        <!-- 중앙: 질문 입력과 답변 나란히 -->
-        <main class="content-area">
-          <div class="chat-layout">
-            <!-- 왼쪽: 질문 입력 -->
-            <section class="panel panel-question">
-              <h2>💬 질문 입력</h2>
-              <div class="question-wrapper">
-                <textarea
-                  id="question"
-                  class="question-input"
-                  placeholder="예) ALD에서 Purge 단계는 왜 중요한가요?&#10;예) MFC에 이상이 생기면 어떤 징후로 확인할 수 있어?&#10;예) VG12와 VG13의 차이는?"
-                  rows="8"
-                ></textarea>
-                <div class="question-footer">
-                  <button id="send-btn" class="btn-primary">
-                    <span class="btn-icon">🚀</span>
-                    <span class="btn-text">질문 보내기</span>
-                  </button>
-                  <div class="question-hints">
-                    <span class="hint-text">⌘+Enter / Ctrl+Enter로 전송</span>
+                <!-- Top-k -->
+                <div class="option-group">
+                  <label for="topk-input" class="option-label">
+                    <span>📊 Top-k 문장 수</span>
+                    <span class="badge badge-primary" id="topk-label">3</span>
+                  </label>
+                  <input
+                    type="range"
+                    id="topk-input"
+                    class="range-input"
+                    min="1"
+                    max="10"
+                    value="3"
+                  />
+                  <div class="range-labels">
+                    <span>1</span>
+                    <span>10</span>
+                  </div>
+                  <p class="option-hint">검색해서 LLM에 전달할 문장 개수</p>
+                </div>
+
+                <!-- Max Tokens -->
+                <div class="option-group">
+                  <label for="max-tokens-input" class="option-label">
+                    <span>📝 최대 생성 토큰</span>
+                    <span class="badge badge-primary" id="max-tokens-label">256</span>
+                  </label>
+                  <input
+                    type="range"
+                    id="max-tokens-input"
+                    class="range-input"
+                    min="64"
+                    max="512"
+                    step="32"
+                    value="256"
+                  />
+                  <div class="range-labels">
+                    <span>64</span>
+                    <span>512</span>
+                  </div>
+                  <p class="option-hint">답변 길이 조절 (길수록 느림)</p>
+                </div>
+
+                <!-- 옵션 플래그 -->
+                <div class="option-group option-flags">
+                  <label class="option-label">🎛️ 고급 옵션</label>
+                  <div class="checkbox-group">
+                    <label class="checkbox-label">
+                      <input type="checkbox" id="context-only" />
+                      <span>컨텍스트만 보기</span>
+                      <span class="checkbox-hint">답변 생성 없이 검색 결과만</span>
+                    </label>
+                    <label class="checkbox-label">
+                      <input type="checkbox" id="debug-flag" />
+                      <span>디버그 모드</span>
+                      <span class="checkbox-hint">백엔드 콘솔에 상세 로그 출력</span>
+                    </label>
                   </div>
                 </div>
-                <div id="info-line" class="info-line"></div>
               </div>
             </section>
+          </aside>
 
-            <!-- 오른쪽: 모델 답변 -->
-            <section class="panel panel-answer">
-              <div class="panel-header">
-                <h2>🤖 모델 답변</h2>
-                <button id="clear-answer-btn" class="btn-ghost">
-                  <span>🗑️</span> 지우기
-                </button>
+          <!-- 중앙: 질문 입력과 답변 나란히 -->
+          <main class="content-area" style="display: flex !important; flex-direction: column !important; width: 100% !important; min-width: 0;">
+            <div class="chat-layout" style="display: grid !important; grid-template-columns: 1fr 1fr !important; gap: 16px !important; width: 100% !important; min-width: 0;">
+              <!-- 왼쪽: 질문 입력 -->
+              <section class="panel panel-question">
+                <h2>💬 질문 입력</h2>
+                <div class="question-wrapper">
+                  <textarea
+                    id="question"
+                    class="question-input"
+                    placeholder="예) ALD에서 Purge 단계는 왜 중요한가요?&#10;예) MFC에 이상이 생기면 어떤 징후로 확인할 수 있어?&#10;예) VG12와 VG13의 차이는?"
+                    rows="8"
+                  ></textarea>
+                  <div class="question-footer">
+                    <button id="send-btn" class="btn-primary">
+                      <span class="btn-icon">🚀</span>
+                      <span class="btn-text">질문 보내기</span>
+                    </button>
+                    <div class="question-hints">
+                      <span class="hint-text">⌘+Enter / Ctrl+Enter로 전송</span>
+                    </div>
+                  </div>
+                  <div id="info-line" class="info-line"></div>
+                </div>
+              </section>
+
+              <!-- 오른쪽: 모델 답변 -->
+              <section class="panel panel-answer">
+                <div class="panel-header">
+                  <h2>🤖 모델 답변</h2>
+                  <button id="clear-answer-btn" class="btn-ghost">
+                    <span>🗑️</span> 지우기
+                  </button>
+                </div>
+                <div id="answer" class="answer-content">
+                  <div class="empty-state">
+                    <div class="empty-icon">💭</div>
+                    <p>왼쪽에 질문을 입력하고 전송 버튼을 눌러주세요.</p>
+                  </div>
+                </div>
+              </section>
+            </div>
+
+            <!-- 컨텍스트 영역 -->
+            <section class="panel panel-context">
+              <div class="panel-header-collapsible">
+                <div style="display: flex; align-items: center; gap: 12px;">
+                  <h2>📚 참고한 컨텍스트</h2>
+                  <span id="context-count" class="badge badge-info">0 개</span>
+                </div>
+                <button class="collapse-btn" id="context-collapse-btn" title="컨텍스트 접기/펼치기">▼</button>
               </div>
-              <div id="answer" class="answer-content">
+              <div id="contexts" class="context-content">
                 <div class="empty-state">
-                  <div class="empty-icon">💭</div>
-                  <p>왼쪽에 질문을 입력하고 전송 버튼을 눌러주세요.</p>
+                  <div class="empty-icon">📄</div>
+                  <p>검색된 컨텍스트가 여기에 표시됩니다.</p>
                 </div>
               </div>
             </section>
-          </div>
+          </main>
+        </div>
 
-          <!-- 컨텍스트 영역 -->
-          <section class="panel panel-context">
-            <div class="panel-header">
-              <h2>📚 참고한 컨텍스트</h2>
-              <span id="context-count" class="badge badge-info">0 개</span>
-            </div>
-            <div id="contexts" class="context-content">
-              <div class="empty-state">
-                <div class="empty-icon">📄</div>
-                <p>검색된 컨텍스트가 여기에 표시됩니다.</p>
+        <!-- 문서 관리 탭 -->
+        <div class="tab-content" id="tab-docs" style="display: none; width: 100%;">
+          <div class="docs-management">
+            <!-- 문서 통계 -->
+            <section class="panel panel-docs-stats">
+              <h2>📊 문서 통계</h2>
+              <div id="docs-stats-content" class="docs-stats-content">
+                <div class="loading-state">
+                  <div class="spinner"></div>
+                  <p>통계를 불러오는 중...</p>
+                </div>
               </div>
-            </div>
-          </section>
-        </main>
+            </section>
+
+            <!-- 문서 추가 -->
+            <section class="panel panel-docs-add">
+              <h2>➕ 문서 추가</h2>
+              <form id="docs-add-form" class="docs-form">
+                <div class="form-group">
+                  <label for="add-keyword">키워드 (쉼표로 구분)</label>
+                  <input type="text" id="add-keyword" class="form-input" placeholder="예: ALD, Precursor" required />
+                </div>
+                <div class="form-group">
+                  <label for="add-text">문장 내용</label>
+                  <textarea id="add-text" class="form-textarea" rows="3" placeholder="추가할 문장을 입력하세요" required></textarea>
+                </div>
+                <button type="submit" class="btn-primary">추가</button>
+              </form>
+              <div id="docs-add-result" class="docs-result"></div>
+            </section>
+
+            <!-- 문서 추출 -->
+            <section class="panel panel-docs-extract">
+              <h2>📄 파일에서 추출</h2>
+              <form id="docs-extract-form" class="docs-form">
+                <div class="form-group">
+                  <label for="extract-file">파일 선택</label>
+                  <input type="file" id="extract-file" class="form-input" accept=".txt,.pdf" required />
+                </div>
+                <div class="form-group">
+                  <label for="extract-keywords">키워드 (쉼표로 구분)</label>
+                  <input type="text" id="extract-keywords" class="form-input" placeholder="예: ALD, MFC, Flow" required />
+                </div>
+                <div class="form-group">
+                  <label for="extract-type">파일 타입</label>
+                  <select id="extract-type" class="form-input">
+                    <option value="text">텍스트</option>
+                    <option value="pdf">PDF</option>
+                  </select>
+                </div>
+                <button type="submit" class="btn-primary">추출 및 추가</button>
+              </form>
+              <div id="docs-extract-result" class="docs-result"></div>
+            </section>
+
+            <!-- 문서 생성 -->
+            <section class="panel panel-docs-generate">
+              <h2>🤖 LLM/템플릿으로 생성</h2>
+              <form id="docs-generate-form" class="docs-form">
+                <div class="form-group">
+                  <label for="generate-mode">생성 모드</label>
+                  <select id="generate-mode" class="form-input">
+                    <option value="template">템플릿</option>
+                    <option value="llm">LLM (기존 데이터 기반)</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="generate-keyword">키워드</label>
+                  <input type="text" id="generate-keyword" class="form-input" placeholder="예: ALD" required />
+                </div>
+                <div class="form-group">
+                  <label for="generate-count">생성 개수</label>
+                  <input type="number" id="generate-count" class="form-input" min="1" max="10" value="3" required />
+                </div>
+                <button type="submit" class="btn-primary">생성 및 추가</button>
+              </form>
+              <div id="docs-generate-result" class="docs-result"></div>
+            </section>
+
+            <!-- 키워드별 그룹 보기 -->
+            <section class="panel panel-docs-group">
+              <h2>📚 키워드별 문서 보기</h2>
+              <button id="load-group-btn" class="btn-primary">문서 목록 불러오기</button>
+              <div id="docs-group-content" class="docs-group-content"></div>
+            </section>
+          </div>
+        </div>
       </div>
 
       <!-- 하단: 키워드 통계 -->
