파인튜닝 품질 개선 및 RAG 기능 향상
- RAG 프롬프트 형식 일치 (messages 기반)
- LLM 기반 답변 생성 (30% 확률)
- 피드백 데이터 선별 활용
- 학습 파라미터 최적화 (learning_rate, epochs, warmup, weight_decay)
- LoRA 파라미터 조정 (rank 32, 더 많은 레이어)
- 쿼리 캐싱, 신뢰도 점수, 관련 질문 제안 기능 추가
- .gitignore 업데이트 (로그, 백업 파일 제외)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -194,6 +194,8 @@
                     <p>왼쪽에 질문을 입력하고 전송 버튼을 눌러주세요.</p>
                   </div>
                 </div>
+                <!-- 관련 질문 영역 -->
+                <div id="related-questions" class="related-questions" style="display: none; margin-top: 16px; padding: 12px; background: var(--bg-secondary); border-radius: var(--radius-md);"></div>
                 <!-- 피드백 버튼 영역 -->
                 <div id="feedback-area" class="feedback-area" style="display: none;">
                   <div class="feedback-label">이 답변이 도움이 되었나요?</div>
